added a config file and fixed bugs